# github-repo-stats

./: .gitignore  LICENSE  README.md  example.yaml  gh_stats.py  gh_traffic.py  pyproject.toml  repos.yaml  requirements.in  requirements.txt  requirments.txt  tox.ini
.github/workflows/: tests.yml
src/gh_stats/: __init__.py  cli.py  gh_stats.py
src/traffic/: traffic.py
tests/: test_cli.py
