[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gh_stats"
authors = [{name = "Ricky White", email = "ricky@migusgroup.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["description"]
version = "0.1.0"
requires-python=">=3.7"
requires = [
    "pyyaml==6.0",
    "requests==2.27.1",
    "click==8.1.2",
    "rich==12.2.0"
]

[project.urls]
Home = "https://migusgroup.com"

[project.scripts]
gh-stats = "src.gh_stats.cli:main"
