[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "github_repo_stats"
authors = [{name = "Ricky White", email = "ricky@migusgroup.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["description"]
requires-python=">=3.7"
dependencies = [
    "pyyaml==6.0",
    "requests==2.28.1",
    "click==8.1.3",
    "rich==12.5.1"
]
version = "0.1.2"

[project.urls]
Home = "https://migusgroup.com"
Source = "https://github.com/The-Migus-Group/gh-repo-stats"

[project.scripts]
gh-stats = "gh_stats.cli:main"

[tool.flit.module]
name = "gh_stats"